kernel/target/thumbv8m.main-none-eabi/debug/build/littlefs2-sys-fd7590767809b097/out/bindings.rs

extern "C" {
    pub fn lfs_setattr(
        lfs: *mut lfs_t,
        path: *const ::core::ffi::c_char,
        type_: u8,
        buffer: *const ::core::ffi::c_void,
        size: lfs_size_t,
    ) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn lfs_removeattr(
        lfs: *mut lfs_t,
        path: *const ::core::ffi::c_char,
        type_: u8,
    ) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn lfs_file_open(
        lfs: *mut lfs_t,
        file: *mut lfs_file_t,
        path: *const ::core::ffi::c_char,
        flags: ::core::ffi::c_int,
    ) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn lfs_file_opencfg(
        lfs: *mut lfs_t,
        file: *mut lfs_file_t,
        path: *const ::core::ffi::c_char,
        flags: ::core::ffi::c_int,
        config: *const lfs_file_config,
    ) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn lfs_file_close(lfs: *mut lfs_t, file: *mut lfs_file_t) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn lfs_file_sync(lfs: *mut lfs_t, file: *mut lfs_file_t) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn lfs_file_read(
        lfs: *mut lfs_t,
        file: *mut lfs_file_t,
        buffer: *mut ::core::ffi::c_void,
        size: lfs_size_t,
    ) -> lfs_ssize_t;
}
extern "C" {
    pub fn lfs_file_write(
        lfs: *mut lfs_t,
        file: *mut lfs_file_t,
        buffer: *const ::core::ffi::c_void,
        size: lfs_size_t,
    ) -> lfs_ssize_t;
}
extern "C" {
    pub fn lfs_file_seek(
        lfs: *mut lfs_t,
        file: *mut lfs_file_t,
        off: lfs_soff_t,
        whence: ::core::ffi::c_int,
    ) -> lfs_soff_t;
}
extern "C" {
    pub fn lfs_file_truncate(
        lfs: *mut lfs_t,
        file: *mut lfs_file_t,
        size: lfs_off_t,
    ) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn lfs_file_tell(lfs: *mut lfs_t, file: *mut lfs_file_t) -> lfs_soff_t;
}
extern "C" {
    pub fn lfs_file_rewind(lfs: *mut lfs_t, file: *mut lfs_file_t) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn lfs_file_size(lfs: *mut lfs_t, file: *mut lfs_file_t) -> lfs_soff_t;
}
extern "C" {
    pub fn lfs_mkdir(lfs: *mut lfs_t, path: *const ::core::ffi::c_char) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn lfs_dir_open(
        lfs: *mut lfs_t,
        dir: *mut lfs_dir_t,
        path: *const ::core::ffi::c_char,
    ) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn lfs_dir_close(lfs: *mut lfs_t, dir: *mut lfs_dir_t) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn lfs_dir_read(
        lfs: *mut lfs_t,
        dir: *mut lfs_dir_t,
        info: *mut lfs_info,
    ) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn lfs_dir_seek(lfs: *mut lfs_t, dir: *mut lfs_dir_t, off: lfs_off_t)
        -> ::core::ffi::c_int;
}
extern "C" {
    pub fn lfs_dir_tell(lfs: *mut lfs_t, dir: *mut lfs_dir_t) -> lfs_soff_t;
}
extern "C" {
    pub fn lfs_dir_rewind(lfs: *mut lfs_t, dir: *mut lfs_dir_t) -> ::core::ffi::c_int;
}
extern "C" {
    #[doc = " Filesystem-level filesystem operations"]
    pub fn lfs_fs_stat(lfs: *mut lfs_t, fsinfo: *mut lfs_fsinfo) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn lfs_fs_size(lfs: *mut lfs_t) -> lfs_ssize_t;
}
extern "C" {
    pub fn lfs_fs_traverse(
        lfs: *mut lfs_t,
        cb: ::core::option::Option<
            unsafe extern "C" fn(
                arg1: *mut ::core::ffi::c_void,
                arg2: lfs_block_t,
            ) -> ::core::ffi::c_int,
        >,
        data: *mut ::core::ffi::c_void,
    ) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn lfs_fs_mkconsistent(lfs: *mut lfs_t) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn lfs_fs_gc(lfs: *mut lfs_t) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn lfs_fs_grow(lfs: *mut lfs_t, block_count: lfs_size_t) -> ::core::ffi::c_int;
}
